public class AnimationParams
{
	public readonly static string FLOAT_HORIZONTAL_MOTION_NAME_PARAM = "Horizontal";

	public readonly static string FLOAT_VERTICAL_MOTION_NAME_PARAM = "Vertical";

	public readonly static string BOOL_RUN_NAME_PARAM = "IsRun";

	public readonly static string BOOL_ATTACK_MODE_NAME_PARAM = "IsAttackMode";

	public readonly static string FLOAT_CURRENT_TYPE_WEAPON = "TypeWeapon"; 
}
