public class AnimationParams
{
	public readonly static string FLOAT_TYPE_WEAPON_NAME_PARAM = "TypeWeapon";

	public readonly static string BOOL_RUN_NAME_PARAM = "IsRun";

	public readonly static string FLOAT_VERTICAL_MOTION_NAME_PARAM = "Vertical";

	public readonly static string FLOAT_HORIZONTAL_MOTION_NAME_PARAM = "Horizontal";

	public readonly static string BOOL_IS_ATTACK_MODE_NAME_PARAM = "IsAttackMode";
}
